[project]
name = "hbn-ddp"
version = "0.1.0"
description = "A repo for reformatting the hbn clinician consensus diagnostic data for analysis."
authors = [{name = "maya-roberts", email = "maya36247@gmail.com"}]
requires-python = ">3.11"
readme = "README.md"
dependencies = [
  "matplotlib>=3.10.0,<4",
  "pandas>=2.2.3,<3",
  "questionary>=2.1.0,<3",
  "kaleido==1.0.0",
  "pillow>=11.1.0,<12",
  "pytz~=2025.1",
  "plotly>=6.0.1,<7",
  "typer>=0.15.4,<0.17",
  "ipykernel>=6.29.5,<7",
  "nbformat>=5.10.4,<6"
]

[project.scripts]
hbnddp = "hbnddp.__main__:app"

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9",
  "mypy>=1.13.0,<2",
  "pre-commit>=4.0.1,<5",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.8.1,<0.9"
]
docs = ["pdoc>=15.0.0,<16"]

[tool.uv]
default-groups = [
  "dev",
  "docs"
]

[tool.hatch.build.targets.sdist]
include = ["src/hbnddp"]

[tool.hatch.build.targets.wheel]
include = ["src/hbnddp"]

[tool.hatch.build.targets.wheel.sources]
"src/hbnddp" = "hbnddp"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
